# voice_app

./: .gitignore  LICENSE  README.md  project_dependencies.txt  requirements.txt
audio_native/: CMakeLists.txt  agc.cpp  agc.h  bindings.cpp  build_native.ps1  echo_cancel.cpp  mixer.cpp  mixer.h  ringbuffer.cpp  ringbuffer.h  webrtc_apm.cpp  webrtc_apm.h
client/: audio.py  echo_cancel.py  main.py  main.spec  native_mixer.py  native_ringbuffer.py  network.py  opus_codec.py  startup_dialog.py  test_discovery.py  voice.ui  voice_ui.py  webrtc_apm.py
server/: server.py
